# calicam

./: .clang-tidy  .gitignore  .style.yapf  CMakeLists.txt  README.md  calicam.py  main.cpp  main.py  pyproject.toml  requirements.txt  run.py
calicam/: __init__.py  extract.py  parser.py  projection.py  types.py  vecs.py
include/: parser.h  solver.h
sample/: data.csv  output.txt
