[tool.poetry]
name = "calicam"
version = "0.1.0"
description = ""
authors = ["Kenneth Lew <lew1101@192.168.12.23>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.3"
numpy = "^1.26.1"
nptyping = "^2.5.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
